--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
+ComplexOptInterface = "25c3070e-1275-41b5-afef-2f982c87090a"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
