make galaticoptim work

--- a/Project.toml
+++ b/Project.toml
@@ -9,4 +9,5 @@ NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
 NLPModelsJuMP = "792afdf1-32c1-5681-94e0-d7bf7a5df49e"
 Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
 NonconvexIpopt = "bf347577-a06d-49ad-a669-8c0e005493b8"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
