--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,13 @@
 [deps]
 ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
 ComplexOptInterface = "25c3070e-1275-41b5-afef-2f982c87090a"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GalacticOptim = "a75be94c-b780-496d-a8a9-0878b188d577"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
 NLPModelsJuMP = "792afdf1-32c1-5681-94e0-d7bf7a5df49e"
 Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
 NonconvexIpopt = "bf347577-a06d-49ad-a669-8c0e005493b8"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
