--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
 NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
 Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
 NonconvexIpopt = "bf347577-a06d-49ad-a669-8c0e005493b8"
