--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
 Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
 NonconvexIpopt = "bf347577-a06d-49ad-a669-8c0e005493b8"
+NonconvexUtils = "c48e48a2-1f5e-44ff-8799-c8e168d11d1b"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
