--- a/variants/Project.toml
+++ b/variants/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 AmplNLWriter = "7c4d4715-977e-5154-bfe0-e096adeac482"
+CasADi_jll = "4e54d0b0-c9f2-5505-b569-bd333cacc8c1"
 ComplexOptInterface = "25c3070e-1275-41b5-afef-2f982c87090a"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Ipopt_jll = "9cc047cb-c261-5740-88fc-0cf96f7bdcc7"
