--- a/variants/Project.toml
+++ b/variants/Project.toml
@@ -2,8 +2,11 @@
 AmplNLWriter = "7c4d4715-977e-5154-bfe0-e096adeac482"
 CasADi_jll = "4e54d0b0-c9f2-5505-b569-bd333cacc8c1"
 ComplexOptInterface = "25c3070e-1275-41b5-afef-2f982c87090a"
+CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Ipopt_jll = "9cc047cb-c261-5740-88fc-0cf96f7bdcc7"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
 SymbolicAD = "309f4015-3481-4d63-a8f9-aeb13adfe8eb"
