--- a/variants/Project.toml
+++ b/variants/Project.toml
@@ -3,6 +3,7 @@ AmplNLWriter = "7c4d4715-977e-5154-bfe0-e096adeac482"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Ipopt_jll = "9cc047cb-c261-5740-88fc-0cf96f7bdcc7"
+JLLPrefixes = "afc68a34-7891-4c5a-9da1-1c62935e7b0d"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptSymbolicAD = "309f4015-3481-4d63-a8f9-aeb13adfe8eb"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
