--- a/variants/Project.toml
+++ b/variants/Project.toml
@@ -1,10 +1,14 @@
 [deps]
+ASL_jll = "ae81ac8f-d209-56e5-92de-9978fef736f9"
 AmplNLWriter = "7c4d4715-977e-5154-bfe0-e096adeac482"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Ipopt_jll = "9cc047cb-c261-5740-88fc-0cf96f7bdcc7"
 JLLPrefixes = "afc68a34-7891-4c5a-9da1-1c62935e7b0d"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+METIS_jll = "d00139f3-1899-568f-a2f0-47f597d42d70"
+MUMPS_seq_jll = "d7ed1dd3-d0ae-5e8e-bfb4-87a502085b8d"
 MathOptSymbolicAD = "309f4015-3481-4d63-a8f9-aeb13adfe8eb"
+OpenBLAS32_jll = "656ef2d0-ae68-5445-9ca0-591084a874a2"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 PythonCall = "6099a3de-0909-46bc-b1f4-468b9a2dfc0d"
