--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,10 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
-ADNLPModels = "0.6"
+ADNLPModels = "0.7"
 Ipopt = "1"
 JuMP = "1"
 Nonconvex = "2"
