fix project compat entries

--- a/Project.toml
+++ b/Project.toml
@@ -21,4 +21,6 @@ Nonconvex = "2"
 NonconvexIpopt = "0.4"
 Optim = "1"
 Optimization = "3"
+OptimizationMOI = "0.3"
+PowerModels = "0.20"
 Symbolics = "5"
