--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
+ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -11,10 +12,13 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
+SparseDiffTools = "47a9eef4-7e08-11e9-0b38-333d64bd3804"
 Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
 ADNLPModels = "0.7"
+ConcreteStructs = "0.2.3"
 Ipopt = "1"
 JuMP = "1.15"
 Nonconvex = "2"
@@ -23,4 +27,6 @@ Optim = "1"
 Optimization = "3"
 OptimizationMOI = "0.3"
 PowerModels = "0.20"
+ReverseDiff = "1.15"
+SparseDiffTools = "2.15"
 Symbolics = "5"
