--- a/variants/Project.toml
+++ b/variants/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 AmplNLWriter = "7c4d4715-977e-5154-bfe0-e096adeac482"
+ConcreteStructs = "2569d6c7-a4a2-43d3-a901-331e8e4be471"
 CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Ipopt_jll = "9cc047cb-c261-5740-88fc-0cf96f7bdcc7"
