--- a/variants/Project.toml
+++ b/variants/Project.toml
@@ -5,6 +5,7 @@ CondaPkg = "992eb4ea-22a4-4c89-a5bb-47a3300528ab"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 Ipopt_jll = "9cc047cb-c261-5740-88fc-0cf96f7bdcc7"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+MathOptSymbolicAD = "309f4015-3481-4d63-a8f9-aeb13adfe8eb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
