--- a/Project.toml
+++ b/Project.toml
@@ -13,13 +13,13 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
-Symbolics = "0c5d862f-8b57-4792-8d23-62f2024744c7"
 
 [compat]
-ADNLPModels = "0.7"
-ExaModels = "0.5"
+ADNLPModels = "0.8.2"
+ExaModels = "0.7"
 Ipopt = "1"
 JuMP = "1.15"
+ModelingToolkit = "9"
 NLPModelsIpopt = "0.10"
 Nonconvex = "2"
 NonconvexIpopt = "0.4"
@@ -27,4 +27,3 @@ Optim = "1"
 Optimization = "3"
 OptimizationMOI = "0.4"
 PowerModels = "0.21"
-Symbolics = "5"
